Proper socket authentication via socket-service. Escaping HTML in messages, but keeping line breaks.

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,12 @@
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script src="app.js"></script>
     <script src="components/socket-service.js"></script>
+	<script src="components/auth-service.js"></script>
 	<script src="components/user-state-service.js"></script>
 	<script src="components/room-service.js"></script>
-	<script src="components/message-service.js"></script>
+    <script src="components/message-service.js"></script>
+    <script src="components/nl2br-filter.js"></script>
+    <script src="components/html-escape-filter.js"></script>
 	<script src="views/login/login-directive.js"></script>
 	<script src="views/chat/room-list-directive.js"></script>
 	<script src="views/chat/message-list-directive.js"></script>
